website: blog: Fix spacing of line separator in navbar.
Previously, only in blog posts, the margin would be too large.
Follow-up to 571e1a416e1148139923418bf801ddb6b17723c3.

* website/static/blog/css/post.css (audio, img, video): Change
CSS selectors to only affect multimedia elements in the article.

--- a/website/static/blog/css/post.css
+++ b/website/static/blog/css/post.css
@@ -8,9 +8,9 @@ h5 {
     font-size: 1.5em;
 }
 
-audio,
-img,
-video {
+article audio,
+article img,
+article video {
     display: block;
     margin: 50px auto;
     max-width: 100%;
